# OSGB-3DTiles

./: .gitignore  CMakeLists.txt  DEV_ENV.md  README.md  README_CLI参数说明.md  README_EN.md  README_配置文件说明.md  build_gdal_tools.bat  build_main.bat  build_viewer.bat  fix_b3dm_texcoord.py  fix_gui_tiles_html.py  fix_init_order.py  fix_ktx_extract.py  fix_sash.py  fix_tileset_bbox.py  fix_window_size.py  fix_zoomed.py  gui_patch.py  make_icon.py  osgb2tiles_gui.py  osgb2tiles_gui.spec  osgb2tiles_setup.iss  patch_fix_bugs.py  patch_fix_lb.py  patch_fix_seams.py  patch_gsd.py  patch_main.py  patch_main_fix.py  patch_ortho.py  patch_ortho2.py  patch_ortho3.py  patch_ortho4.py  patch_ortho5.py  patch_ortho6.py  patch_ortho_final.py  patch_pano.py  patch_pano12k.py  run_convert.bat  vcpkg.json  (+1 more)
.github/workflows/: release.yml
docs/: 工作日志2026-02-21.md  工作日志2026-02-22.md  工作日志2026-02-23.md
src/: Config.h  GeometryConverter.cpp  GeometryConverter.h  GlbWriter.cpp  GlbWriter.h  Logger.cpp  Logger.h  MathUtils.h  MeshSimplifier.cpp  MeshSimplifier.h  OsgbMetaReader.cpp  OsgbMetaReader.h  OsgbReader.cpp  OsgbReader.h  TextureProcessor.cpp  TextureProcessor.h  ThreadPool.cpp  ThreadPool.h  TilesetBuilder.cpp  TilesetBuilder.h  TopLevelMerger.cpp  TopLevelMerger.h  WinUtils.h  main.cpp  osgb_viewer.cpp
vcpkg-overlay/ktx/: portfile.cmake
